# oaken-spirits

./: .gitignore  .pdm-python  1A_KAFKA_AWS.md  2A_AWS.md  2B_LOCAL_DOCKER.md  3_ANALYTICS.md  ANALYTICS.md  ANALYTICS_PIPELINE.md  AWS_S3.md  CLEANUP.md  CLEAN_UP.md  CLOUD_BEAVER.md  DAEMON.md  DASHBOARD.md  EC2.md  ENV_VARIABLE.md  LOCAL_DOCKER.md  MIT-LICENSE.txt  OAKEN_TECHNICAL_DESIGN.md  README.md  REQUIREMENTS.md  STRUCTURE.md  Set_Up_Kafka.md  data-cleaning.ipynb  imagescloud-beaver  invoice-streaming-api.ipynb  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
aws-documentation/: AWS.md  AWS_S3.md  DAEMON.md  KAFKA_AWS.md  OAKEN_AWS_TECHNICAL_DESIGN.md  TERRAFORM.md
documentation/: DASH.md  DATA_CALCULATIONS.md  SQL_STYLE_GUIDE.md  STRUCTURE.txt
src/: accounting.yml  accounting_runner.sh  create-topics.sh  data-cleaning.ipynb  docker-compose.yml  invoice-streaming-api.ipynb  mysql-kafka-processor.yml  mysql_api_runner.sh  shipping.yml  shipping_runner.sh  streaming-invoice.ipynb  variables.py
src/1 docker/: Dockercompose.yml  accounting.yml  mysql-kafka.yml
src/1_docker/: docker-compose.yml  shipping.yml
src/1_oaken_docker/: accounting.yml  docker.env.template  mysql-kafka-processor.yml  shipping.yml
src/accounting/: account.py
src/archive/: airbyte  cloudFunction.py  docker-compose.yml  env-template  old-dockerfile.yml  shipping_runner.sh
src/aws/: .terraform.lock.hcl  main.tf
src/aws-s3-logging/: s3.py
src/docker/: accounting_runner.sh  app  data
src/mysql-api/: mysql-api.py  mysql_kafka_processor.service
src/oaken-services/: temp  (+11 more)
(+243 files in other folders)
