[project]
name = "oaken-spirits"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "python-dotenv>=1.0.1",
    "mysql>=0.0.3",
    "mysqlclient>=2.2.4",
    "mysql-connector-python>=8.3.0",
    "pandas>=2.2.1",
    "dbt>=1.0.0.37.6",
    "ipykernel>=6.29.4",
    "dagster>=1.7.0",
    "dagster-cloud>=1.7.0",
    "dagster-dbt>=0.23.0",
    "dbt-core>=1.7.11",
    "dbt-bigquery>=1.7.7",
    "dagster-webserver>=1.7.0",
    "dagster-airbyte>=0.23.0",
    "dagit>=1.7.0",
    "pytest>=8.1.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "NONE"}


[tool.pdm]
distribution = false